--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
+    <nav class="navbar navbar-default" role="navigation">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Link</a></li>
+        <li><a href="#">Link</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
     <h1>Hallo Git!</h1>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
