--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
   </div>
 </nav>
-    <h1>Hallo Git!</h1>
+    <h1>Hallo!</h1>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
